Fix time-card overflow (firefox) Fix position x-buttom to hotel-card

--- a/app/assets/stylesheets/plans.css.scss
+++ b/app/assets/stylesheets/plans.css.scss
@@ -408,7 +408,7 @@ a[href^="#tag"]:before {
 }
 
 .time-card .title {
-  overflow: hidden;
+  overflow: visible;
   margin-right: 0px;
 }
 
